feature: adicion de endpoints de GETs, POSTs, PUT y DELETE de usuarios
