# internal/infrastructure/api/routes/user_routes.go
@@ -7,9 +7,28 @@ import (
 )
 
 func RegisterUserRoutes(router *mux.Router, userHandler *handlers.UserHandler) {
+	router.HandleFunc("/users", func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusOK)
+	}).Methods(http.MethodOptions)
+	router.HandleFunc("/users/{user_id}", func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusOK)
+	}).Methods(http.MethodOptions)
 	router.HandleFunc("/users/profile", func(w http.ResponseWriter, r *http.Request) {
 		w.WriteHeader(http.StatusOK)
 	}).Methods(http.MethodOptions)
+	router.HandleFunc("/users/recover/{user_id}", func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusOK)
+	}).Methods(http.MethodOptions)
+	router.HandleFunc("/users/{user_id}/roles", func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusOK)
+	}).Methods(http.MethodOptions)
 
+	router.HandleFunc("/users", userHandler.CreateUser).Methods(http.MethodPost)
 	router.HandleFunc("/users/profile", userHandler.GetUserProfile).Methods(http.MethodGet)
+	router.HandleFunc("/users/recover/{user_id}", userHandler.RecoverUser).Methods(http.MethodGet)
+	router.HandleFunc("/users/{user_id}", userHandler.GetUserByID).Methods(http.MethodGet)
+	router.HandleFunc("/users/{user_id}", userHandler.DeleteUser).Methods(http.MethodDelete)
+	router.HandleFunc("/users/{user_id}", userHandler.UpdateUser).Methods(http.MethodPut)
+	router.HandleFunc("/users/{user_id}", userHandler.ActivateOrDeactivateUser).Methods(http.MethodPatch)
+	router.HandleFunc("/users/{user_id}/roles", userHandler.AssignRoleToUser).Methods(http.MethodPost)
 }
